# GREENWIRE

./: # Code Citations.md  # Commit Summary 2.md  # Commit Summary.md  # Stash Summary.md  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  APDU_FUZZING.md  APPLET_OVERVIEW.md  ARCHITECTURE.md  CHANGELOG-CODEX.md  CHANGELOG.md  CLI_MODERN_DOCUMENTATION.md  CLI_QUICK_REFERENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CommandAPDU.java  GREENWIRE.code-workspace  GREENWIRE_ANALYSIS.md  GreenwireApplet.java  INTELLIGENT_CARD_SYSTEM.md  JAVACARD_BUILD_NOTE.md  JCOPCardManager.java  LICENSE  New Text Document.txt  PROFILE.md  README.md  README_DETAILED.md  README_NEW.md  SECURITY.md  STATIC_DEPLOYMENT.md  STATIC_DISTRIBUTION_INVENTORY.md  STUBS_TODO.md  THIRD_PARTY_LICENSES.md  Untitled-1.java  Untitled-1.txt  Untitled-2.java  Untitled-2.py  WIRELESS_STANDARDS_AND_CRYPTO.md  (+99 more)
.github/: copilot-instructions.md  dependabot.yml
ai_knowledge_base/: learning.db
ai_learning_sessions/: hsm_atm_knowledge.db  learning.db
apdu4j_data/: INTEGRATION_SUMMARY.md  README.md  apdu4j_cli.py  apdu4j_integration.py  apdu_commands.py  apdu_commands.py.bak  gp_commands.py  gp_commands.py.bak  test_apdu4j.py
archive/: MANIFEST.md
artifacts/: orchestrator.db
cli/: __init__.py  argument_parser.py  argument_parser.py.bak  command_router.py  command_router.py.bak
codeql-custom-queries-python/: codeql-pack.yml
commands/: __init__.py  cap_management.py  card_commands.py  crypto_commands.py  emulation_commands.py  fuzz_commands.py  gp_commands.py  issuer_pipeline.py  nfc_commands.py  (+5 more)
(+456 files in other folders)
