[tool.poetry]
name = "greenwire"
version = "0.1.0"
description = "EMV/smartcard/NFC testing framework"
authors = ["phawd <devnull@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".venv", "dist", "build", "static/lib", "__pycache__"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --maxfail=1"
python_files = ["tests/test_*.py"]
